# fediboat

./: MANIFEST.in  README.md  cli.py  feta.py  pyproject.toml  pytest.ini
api/: account.py
fediboat/: __main__.py  cli.py  entities.py  feta.py  screens.py  settings.py  timeline.tcss
fediboat/api/: account.py  auth.py  entity.py  statuses.py  timeline.py  timelines.py
fediboat/screens/: base.py  timelines.py
tests/: conftest.py  test_api.py  test_tui.py
tests/data/: new_thread_statuses.json  notifications.json  old_notifications.json  old_statuses.json  old_thread_statuses.json  thread_status.json  timeline_statuses.json
