[project]
name = "fediboat"
version = "0.0.1"
authors = [
  { name="LoRiot", email="lo_riot@riseup.net" },
]
description = "Fediboat - Mastodon TUI client with a Newsboat-like interface."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/Lo-Riot/fediboat"
Issues = "https://github.com/Lo-Riot/fediboat/issues"

[project.scripts]
fediboat = "fediboat.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages=[
    "fediboat",
    "fediboat.api"
] 
