[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "fediboat"
dynamic = ["version"]
authors = [
  { name="LoRiot", email="lo_riot@riseup.net" },
]
description = "Fediboat - Mastodon TUI client with a Newsboat-like interface."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
   "textual~=1.0.0", 
   "beautifulsoup4>=4.12.3,<5.0",
   "requests>=2.32.3,<3.0",
   "click~=8.1",
   "pydantic>=2.10.4,<3.0",
]

[tool.setuptools_scm]

[project.urls]
Homepage = "https://github.com/Lo-Riot/fediboat"
Issues = "https://github.com/Lo-Riot/fediboat/issues"

[project.scripts]
fediboat = "fediboat.cli:cli"

[tool.setuptools]
packages=[
    "fediboat",
    "fediboat.api"
] 
